# b-py

./: CHANGELOG.md  README.md  cookiecutter.json
hooks/: post_gen_project.sh
{{ cookiecutter.__project_slug }}/: CHANGELOG.md  Dockerfile  LICENSE.txt  Makefile  README.md  entrypoint.sh  pyproject.toml
{{ cookiecutter.__project_slug }}/.github/workflows/: github_ci.yml
{{ cookiecutter.project_slug }}/: .bumpversion.cfg  .gitignore  CHANGELOG.md  Dockerfile  LICENSE.txt  Makefile  README.md  entrypoint.sh  pyproject.toml
{{ cookiecutter.project_slug }}/.github/workflows/: github_ci.yml
